# learning

./: Cargo.toml  README.md  flake.nix
benches/: hardware.rs  solutions.rs  throughput.rs
benches/shared/: inputs.rs
proptest-regressions/solutions/leetcode/: s3661.txt
scripts/: bench_report.sh  gen_readme.py
src/: main.rs
src/solutions/: mod.rs  s3661.rs
src/solutions/leetcode/: mod.rs  s2075.rs  s2126.rs  s2515.rs  s3093.rs  s3121.rs  s3161.rs  s3300.rs  s3488.rs  s3661.rs
src/utils/: gen.rs  log.rs  mod.rs
