[package]
name = "learning"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"

[[bench]]
name = "solutions"
harness = false


[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
