[package]
name = "learning"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
criterion-perf-events = "0.4.0"
perfcnt = "0.8"
proptest = "1"
rand = "0.8"
gungraun = "0.19"

[dependencies]
rand = "0.8"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "hardware"
harness = false

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[profile.release]
debug = true
strip = false
